tests/e2e/keyword_to_service_argument.story
service action from: "" to: "" # Idea is to demonstrate argument `to` is parsed successfully.